--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,78 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+:root {
+  --main-bg-color: #edf6f9;
+  --light-blue: #83c5be;
+  --dark-blue: #006d77;
+  --orange: #e29578;
+  --almond: #ffddd2;
+}
+.page-container {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0;
+  background-color: var(--main-bg-color);
+  font-family: "Arimo";
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  padding: 1%;
+  margin-bottom: 5%;
+  height: 5vh;
+  position: sticky;
+  top: 0;
+  display: flex;
+  background-color: var(--main-bg-color);
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.navbar {
+  height: 5vh;
 }
 
-.card {
-  padding: 2em;
+.nav-button {
+  border: 1px solid var(--dark-blue);
+  height: 100%;
+  background-color: var(--light-blue);
+  color: var(--dark-blue);
 }
 
-.read-the-docs {
-  color: #888;
+.nav-button:hover {
+  background-color: var(--dark-blue);
+  color: var(--light-blue);
+  border: 1px solid var(--light-blue);
+}
+
+.header-logo {
+  width: 10%;
+  text-align: left;
+}
+
+.h1-header-logo {
+  all: unset;
+}
+
+.logo-image {
+  height: 100%;
+}
+
+.header-user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 10%;
+  text-align: right;
+}
+
+.header-avatar {
+  height: 100%;
+}
+
+.header-welcome {
+  text-align: left;
+  font-weight: bold;
+  color: var(--dark-blue);
 }
