--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,60 @@ body {
   font-weight: bold;
   color: var(--dark-blue);
 }
+
+.filter-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3% 25%;
+  padding: 0;
+  height: 5%;
+  background-color: var(--almond);
+  border: 1px solid var(--orange);
+  border-radius: 10vh;
+}
+
+.filter-property-type-option {
+  font-size: small;
+}
+
+.property-types-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1%;
+}
+
+.property-type-options {
+  display: flex;
+}
+
+.sort-by-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1%;
+}
+
+select {
+  border-radius: 25px;
+}
+
+.price-input {
+  width: 20%;
+}
+
+.price-range-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.filter-search-wrapper {
+  padding-right: 1%;
+}
+
+.filter-bar-button {
+  background-color: inherit;
+  border: 0;
+}
