--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 
 .header {
   padding: 1%;
-  margin-bottom: 5%;
+  margin-bottom: 4%;
   height: 5vh;
   position: sticky;
   top: 0;
@@ -141,25 +141,26 @@ select {
   padding: 1vh 0;
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
-  align-content: flex-end;
+  justify-content: space-around;
 }
 
 .property-card {
   border: 3px double var(--light-blue);
-  border-radius: 5px;
+  border-radius: 10px;
   margin: 1% 1%;
   width: 300px;
   height: 250px;
   display: flex;
   flex-direction: column;
-  background-color: var(--almond);
+  background-color: var(--main-bg-color);
 }
 
 .property-card-image {
   margin: 0;
   width: 100%;
   height: 80%;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
 
 .property-card-details-wrapper {
