--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,6 @@
   --orange: #e29578;
   --almond: #ffddd2;
 }
-.page-container {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
 
 body {
   margin: 0;
@@ -140,13 +134,13 @@ select {
   padding: 1vh 0;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  gap: 3vh 2vw;
+  justify-content: center;
 }
 
 .property-card {
   border: 3px double var(--light-blue);
   border-radius: 10px;
-  margin: 1% 1%;
   width: 300px;
   height: 250px;
   display: flex;
@@ -163,9 +157,9 @@ select {
 }
 
 .property-card-details-wrapper {
-  margin-top: 3%;
   display: flex;
   justify-content: space-between;
+  margin-top: 3.5%;
 }
 
 .property-card-name {
@@ -182,4 +176,10 @@ select {
 .property-card-price {
   margin-right: 2%;
   color: var(--dark-blue);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  font-family: inherit;
 }
