Created ImageCard component which has an imageUrl attribute, and returns a div with the class of image-card, or blank-card if the imageUrl is undefined. Created PropertyDetailsCardGrid which returns a div containing 3 DetailCards (price, rating and times favourited) and 3 ImageCards. PropertyDetails section now uses data from the server.

--- a/src/App.css
+++ b/src/App.css
@@ -254,6 +254,14 @@ a {
   border-radius: 5px;
 }
 
+.empty-card {
+  width: 240px;
+  height: 180px;
+  border: double 3px var(--light-blue);
+  border-radius: 5px;
+  background-color: var(--light-blue);
+}
+
 .detail-card-emphasis {
   color: var(--dark-blue);
   font-size: 3.5rem;
