--- a/src/App.css
+++ b/src/App.css
@@ -303,3 +303,82 @@ a {
 hr {
   border: solid 1px var(--light-blue);
 }
+
+.view-single-property-reviews-container {
+  margin: 5vh 10vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+.review-header {
+  margin: 2%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+}
+
+.review-container {
+  border: solid 2px var(--light-blue);
+  border-radius: 10px;
+  width: 40%;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.review-header-details {
+  display: flex;
+  flex-direction: column;
+
+  margin-left: 3%;
+}
+
+.review-guest-container {
+  margin: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.review-avatar {
+  margin-left: 2%;
+  border-radius: 100%;
+}
+
+.review-guest-name {
+  font-weight: bold;
+}
+
+.review-date {
+  font-size: 0.8rem;
+  color: var(--dark-blue);
+}
+
+.review-comment {
+  display: flex;
+  flex-direction: column;
+  font-style: italic;
+  margin: 5% 10% 0;
+  text-align: center;
+}
+
+.quote-marks-opening {
+  font-size: 3rem;
+  color: var(--dark-blue);
+  text-align: start;
+}
+
+.quote-marks-closing {
+  font-size: 3rem;
+  text-align: end;
+  color: var(--dark-blue);
+  margin-top: 6%;
+  margin-bottom: 0;
+}
+
+.review-rating {
+  font-size: 3rem;
+  color: var(--dark-blue);
+}
