Created getPropertiesByHostId method in api.js which returns all properties belonging to the passed host_id. Added Other Properties From Host section to ViewSingleProperty route.

--- a/src/App.css
+++ b/src/App.css
@@ -382,3 +382,8 @@ hr {
   font-size: 3rem;
   color: var(--dark-blue);
 }
+
+.other-properties-heading {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
