Clicking on Other Properties From Host re-renders the the ViewSingleProperty route with the clicked property_id and scrolls back to top of page.

--- a/src/App.css
+++ b/src/App.css
@@ -77,8 +77,8 @@ body {
   margin: 2% 25%;
   padding: 0;
   height: 5%;
-  background-color: var(--almond);
-  border: 1px solid var(--orange);
+  background-color: var(--light-blue);
+  border: 1px solid var(--dark-blue);
   border-radius: 10vh;
 }
 
