--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,9 @@ body {
 }
 
 .header-avatar {
-  height: 100%;
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
 }
 
 .header-welcome {
@@ -387,4 +389,36 @@ hr {
 .other-properties-heading {
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.no-reviews {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.review-button {
+  display: flex;
+  justify-content: center;
+  background-color: var(--light-blue);
+  border: double 3px var(--light-blue);
+  border-radius: 5px;
+  margin-left: 1%;
+  max-width: 100px;
+}
+
+.review-button:hover {
+  background-color: none;
+  border-color: white;
+}
+
+.write-review-icon {
+  width: 30px;
+}
+
+.add-review-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
