--- a/src/App.css
+++ b/src/App.css
@@ -422,3 +422,48 @@ hr {
   align-items: center;
   justify-content: center;
 }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 5px;
+  background-color: #fff;
+  z-index: 1000;
+  border: solid 3px var(--light-blue);
+  border-radius: 5px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+}
+
+.review-stars-container {
+  height: 100px;
+}
+
+.star {
+  background-color: none;
+  padding: 0;
+  border: 0;
+  z-index: 1;
+}
+
+.star-filled {
+  background-color: var(--light-blue);
+  padding: 0;
+  border: 0;
+  z-index: 1;
+}
+
+#write-review-text {
+  margin: 1%;
+  border: double 3px var(--light-blue);
+}
