--- a/src/App.css
+++ b/src/App.css
@@ -435,6 +435,19 @@ hr {
   border-radius: 5px;
 }
 
+.close-modal {
+  display: block;
+  text-align: end;
+  margin-right: 5px;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.close-modal:hover {
+  color: var(--light-blue);
+  cursor: pointer;
+}
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -445,8 +458,18 @@ hr {
   z-index: 1000;
 }
 
+.write-review-form {
+  padding: 10px;
+}
+
 .review-stars-container {
   height: 100px;
+  margin-top: 5px;
+  margin-bottom: 30px;
+}
+
+.review-stars-container:hover {
+  cursor: pointer;
 }
 
 .star {
@@ -463,7 +486,14 @@ hr {
   z-index: 1;
 }
 
+.review-textarea {
+  width: inherit;
+  display: flex;
+  justify-content: center;
+}
+
 #write-review-text {
-  margin: 1%;
+  margin-top: 5px;
   border: double 3px var(--light-blue);
+  resize: none;
 }
