--- a/src/App.css
+++ b/src/App.css
@@ -548,6 +548,27 @@ hr {
   color: #fff;
 }
 
+.close-review-button {
+  display: block;
+
+  background-color: var(--light-blue);
+  border: double 3px var(--light-blue);
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.close-review-button:hover {
+  border-color: white;
+}
+
+.close-review-button:active {
+  color: #fff;
+}
+
 #rating-warning {
   color: red;
   display: none;
@@ -567,6 +588,7 @@ hr {
   height: 400px;
   overflow-y: scroll;
   overflow-x: hidden;
+  scrollbar-color: var(--light-blue) #fff;
 }
 
 .review-divider {
@@ -579,4 +601,37 @@ hr {
 .review-divier-hr {
   padding-left: 25%;
   padding-right: 25%;
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 90%;
+}
+
+.hidden {
+  display: none;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+.loader {
+  border: 10px solid #fff;
+  border-top: 10px solid var(--light-blue);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
