--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,13 @@ body {
   position: sticky;
   top: 0;
   display: flex;
-  background-color: var(--main-bg-color);
+  background-color: #fff;
   justify-content: space-between;
+  z-index: 1000;
 }
 
 .navbar {
-  height: 5vh;
+  height: 5%;
 }
 
 .nav-button {
@@ -76,16 +77,28 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 2% 25%;
+  margin: 2% 20%;
   padding: 0;
   height: 5%;
-  background-color: var(--light-blue);
-  border: 1px solid var(--dark-blue);
-  border-radius: 10vh;
+  color: var(--dark-blue);
+
+  font-weight: bold;
+
+  border-radius: 5px;
 }
 
-.filter-property-type-option {
-  font-size: small;
+.property-type-options {
+  font-size: 0.8rem;
+  color: var(--dark-blue);
+  background-color: #fff;
+  border-radius: 5px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  padding: 0 8px;
+  border: 3px double var(--light-blue);
+  height: 26px;
+  margin-top: 10px;
 }
 
 .property-types-wrapper {
@@ -95,15 +108,19 @@ body {
   padding: 1%;
 }
 
-.property-type-options {
-  display: flex;
-}
-
 .sort-by-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1%;
+}
+
+#sort-by {
+  color: var(--dark-blue);
+  border: 3px double var(--light-blue);
+  margin-top: 10px;
+  border-radius: 5px;
+  height: 32px;
 }
 
 select {
@@ -115,9 +132,15 @@ select {
 }
 
 .price-range-wrapper {
+  text-align: center;
+}
+
+.min-max-price-inputs {
+  margin-top: 10px;
   display: flex;
-  flex-direction: column;
+  column-gap: 30px;
   align-items: flex-end;
+  font-weight: 400;
 }
 
 .filter-search-wrapper {
@@ -127,6 +150,10 @@ select {
 .filter-bar-button {
   background-color: inherit;
   border: 0;
+}
+
+.filter-bar-divider {
+  width: 65%;
 }
 
 .properties-grid {
