Updated ViewSingleProperty route to display if the property is favourited by the logged-in user. Clicking the favourites img toggles the styling but is not connected to the backend yet

--- a/src/App.css
+++ b/src/App.css
@@ -235,6 +235,13 @@ a {
   background-color: var(--light-blue);
 }
 
+.view-single-property-name-favourite-wrapper {
+  display: flex;
+  width: 105%;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .view-single-property-name {
   margin: 0;
   font-size: xx-large;
