Updated /users/:id route so a warning displays when trying to update details without making any changes.

--- a/src/App.css
+++ b/src/App.css
@@ -771,6 +771,12 @@ hr {
   align-items: center;
 }
 
+#update-details-warning {
+  margin-top: 10%;
+  text-align: center;
+  color: red;
+}
+
 .confirm-update-buttons-container {
   margin-top: 10%;
   margin-bottom: 3%;
