--- a/src/label.css
+++ b/src/label.css
@@ -1,5 +1,5 @@
 :root {
-  --main-bg-color: #edf6f9;
+  --main-bg-color: #fff;
   --light-blue: #83c5be;
   --dark-blue: #006d77;
   --red: rgb(206, 96, 96);
